2010-12-14  Jakub Jelinek  <jakub@redhat.com>

	PR debug/46885
	* tree-parloops.c (canonicalize_loop_ivs): Use gsi_last_bb                                                                                 
	instead of gsi_last_nondebug_bb.

2010-09-20  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/45695
	* combine.c (try_combine): When splitting a two set pattern,
	make sure the pattern which will be put into i2 doesn't use REGs
	or MEMs set by insns in between i2 and i3.

2010-08-25  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/44858
	* combine.c (try_combine): If recog_for_combine added CLOBBERs to
	newi2pat, make sure they don't affect newpat.
	
2009-12-02  Richard Guenther  <rguenther@suse.de>

	PR middle-end/42229
	* cfgloopmanip.c (remove_path): Avoid cancelling loops
	twice.

2009-06-30  Wei Guozhi  <carrot@google.com>

	* config/i386/i386.c (memory_address_length): Check existence of base
	register before using it.

2012-02-23  Uros Bizjak  <ubizjak@gmail.com>

	PR c/52290
	* c-decl.c (start_function): Exit early if decl1 is not FUNTION_DECL.

2012-02-22  Uros Bizjak  <ubizjak@gmail.com>

	PR target/52330
	* config/i386/i386.c (ix86_print_operand) <case 'H'>: Error out if x
	is not offsettable memory reference.

2012-01-15  Uros Bizjak  <ubizjak@gmail.com>

	PR rtl-optimization/51821
	* recog.c (peep2_find_free_register): Determine clobbered registers
	from insn pattern.

2012-01-09  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/mips/mips.md (loadgp_newabi_<mode>): Add missing earlyclobber.

2011-12-21  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/linux-unwind.h: Update copyright years.
	(MD_FROB_UPDATE_CONTEXT): New define.
	(alpha_frob_update_context): New function.

2011-12-13  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* regmove.c (fixup_match_2): Only access call_used_regs with hard regs.

2011-12-09  Kazu Hirata  <kazu@codesourcery.com>

	Backport from mainline: