@@ -1,3 +1,10 @@
+2011-12-15  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/51360
+	* gcc.dg/gomp/pr51360.c: New test.
+	* g++.dg/gomp/pr51360.C: New test.
+	* g++.dg/gomp/pr51360-2.C: New test.
+
 2010-12-14  Jakub Jelinek  <jakub@redhat.com>
 
 	PR debug/46885
