@@ -1,3 +1,9 @@
+2011-12-15  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/51360
+	* c-parser.c (c_parser_omp_clause_num_threads,
+	c_parser_omp_clause_schedule): Call mark_exp_read.
+
 2010-12-14  Jakub Jelinek  <jakub@redhat.com>
 
 	PR debug/46885
